# MaiDXMR_backend

./: .gitignore  CMakeLists.txt  DartConfiguration.tcl  README.md  dxr_listener.py  main.cpp  makefile  tcp_listener.py
pysrc/: dxr_listener.py  key_code_test.py  pykey.py  pyserial.py  run_me.bat  test_keyInput.py
src/: main.cpp
src/bitBlt/: bitBlt.h
src/network/: udpClient.h
src/nvenc/AppEncD3D11/: AppEncD3D11.h
src/nvenc/AppEncD3D11/NvEncoder/: NvEncoder.cpp  NvEncoderD3D11.cpp  nvEncodeAPI.h
src/nvenc/Common/: AppEncUtils.h
src/nvenc/Utils/: NvEncoderCLIOptions.h
src/nvenc/cuvid/: AppDecUtils.h  Logger.cpp
src/nvenc/cuvid/NvDecoder/: NvDecoder.cpp  NvDecoder.h
src/nvenc/cuvid/Utils/: ColorSpace.cu  ColorSpace.h  Logger.h
src/nvenc/old/: NvEncoder.cpp
src/nvenc/win32/: FfiDynamicEncoderParams.h  NvEncoder.cpp  VideoEncoder.h  VideoEncoderNVENC.cpp  VideoEncoderNVENC.h
src/nvenc/win32/alvr_common/: packet_types.h
src/nvenc/win32/alvr_server/: Logger.cpp  Logger.h  Settings.cpp  Settings.h  bindings.h
